syntax = "proto3";
package prism.refractor;

import "gogoproto/gogo.proto";
import "prism/refractor/asset_state.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/prism-finance/prism-core/x/refractor/types";

// GenesisState defines the refractor module's genesis state.
message GenesisState {
  repeated AssetState asset_state_list = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
